[tool.poetry]
name = "dimondrat"
version = "0.1.0"
description = ""
authors = ["SegYT sasilisos69@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
consultor = "^0.2.0"
kivy = "^2.0.0"
opencv-python = "^4.5.1"
pyfiglet = "^0.8.post1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
